# midi-rate-conv

./: CMakeLists.txt  README.md
.github/workflows/: release-binary.yml
include/: config.h  ring_buffer.h  sc55_emu.h  tusb_config.h
src/: main.c  ring_buffer.c  sc55_emu.c  sc55_map.h  uart_midi.c  usb_descriptors.c  usb_midi.c
